--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -12,9 +12,12 @@
 .pagination {
   margin-top: auto;
   padding: 0 3.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &::after {
-    content: '';
+    content: "";
     display: table;
     clear: both;
   }
